# sketchup-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/skills/release/: SKILL.md
extension/: extension.json  package.rb  su_mcp.rb
extension/su_mcp/: dispatcher.rb  entities.rb  logger.rb  main.rb  menu.rb  server.rb
extension/su_mcp/tools/: booleans.rb  components.rb  joints.rb  materials.rb  query.rb  ruby.rb  scene.rb  system.rb  transforms.rb
server/: pyproject.toml
server/sketchup_mcp/: config.py  connection.py  server.py
server/sketchup_mcp/tools/: __init__.py  booleans.py  components.py  joints.py  materials.py  query.py  ruby.py  scene.py  system.py  transforms.py
