[project]
name = "sketchup-mcp"
version = "0.1.0"
description = "MCP server for SketchUp"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
sketchup-mcp = "sketchup_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sketchup_mcp"]
